yamls/nginx/nginx.yml
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: nginx-config
# data:
#   default.conf: |-
#     server {
#         listen       80;
#         server_name  nginx-service;

#         # location / {
#         #    proxy_pass  http://python-service:5000/;
#         # }
        
#         location / {
#             root   /usr/share/nginx/html;
#             index  index.html index.htm;
#         }
#         error_page  404              /404.html;

#         # redirect server error pages to the static page /50x.html
#         #
#         error_page   500 502 503 504  /50x.html;
#         location = /50x.html {
#             root   /opt/nginx/html;
#         }
#     }

# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep
  labels:
    app: nginx-dep
spec:
  progressDeadlineSeconds: 600
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-dep
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-dep
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: nginx-dep-port
          containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-config
          subPath: default.conf
        # env:
        #   - name: MY_NODE_NAME
        #     valueFrom:
        #       fieldRef:
        #         fieldPath: spec.nodeName
        #   - name: MY_POD_NAME
        #     valueFrom:
        #       fieldRef:
        #         fieldPath: metadata.name
        #   - name: MY_POD_NAMESPACE
        #     valueFrom:
        #       fieldRef:
        #         fieldPath: metadata.namespace
        #   - name: MY_POD_IP
        #     valueFrom:
        #       fieldRef:
        #         fieldPath: status.podIP
        #   - name: MY_POD_SERVICE_ACCOUNT
        #     valueFrom:
        #       fieldRef:
        #         fieldPath: spec.serviceAccountName
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          name: nginx-config
        name: nginx-config
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-service
# #   labels:
#     app: nginx-service
# spec:
#   # clusterIP: 10.106.181.150
#   # clusterIPs:
#   # - 10.106.181.150
#   externalTrafficPolicy: Cluster
#   type: ClusterIP
#   ports:
#   - port: 80
#     protocol: TCP
#     targetPort: 80
#   selector:
#     app: nginx-dep
#   sessionAffinity: None

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-service
#   labels:
#     app: nginx-service
# spec:
#   type: NodePort
#   ports:
#   - port: 80
#     protocol: TCP
#     targetPort: 80
#     nodePort: 30002
#   selector:
#     app: nginx-dep
#   sessionAffinity: None
