yamls/nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  clusterIP: 10.106.181.154
  clusterIPs:
  - 10.106.181.154
  externalTrafficPolicy: Cluster
  type: NodePort
  ports:
  - nodePort: 30080
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-dep
  sessionAffinity: None
